@@ -57,6 +57,7 @@ In alphabetical order (by last name)
 ** Support for context_setup and context_teardown (now before(:all) and after(:all))
 ** Patch [#9678] Custom runner command line switch, and multi-threaded runner
 ** Patch [#9605] Patch for ER 9472, shared behaviour
+** Patch [#11868] Add ability for pending to optionally hold a failing block and to fail when it passes
 * Lachie Cox
 ** Initial Rails support
 ** Diffing enhancements for Objects and custom formats
