@@ -174,11 +174,11 @@ a {
 <div class="behaviour">
   <dl>
   <dt id="behaviour_1">Mocker</dt>
-    <script type="text/javascript">moveProgressBar('6.2');</script>
+    <script type="text/javascript">moveProgressBar('5.8');</script>
     <dd class="spec passed"><span class="passed_spec_name">should be able to call mock()</span></dd>
     <script type="text/javascript">makeRed('rspec-header');</script>
     <script type="text/javascript">makeRed('behaviour_1');</script>
-    <script type="text/javascript">moveProgressBar('12.5');</script>
+    <script type="text/javascript">moveProgressBar('11.7');</script>
     <dd class="spec failed">
       <span class="failed_spec_name">should fail when expected message not received</span>
       <div class="failure" id="failure_1">
@@ -194,7 +194,7 @@ a {
 <span class="linenum">15</span>  </code></pre>
       </div>
     </dd>
-    <script type="text/javascript">moveProgressBar('18.7');</script>
+    <script type="text/javascript">moveProgressBar('17.6');</script>
     <dd class="spec failed">
       <span class="failed_spec_name">should fail when messages are received out of order</span>
       <div class="failure" id="failure_2">
@@ -210,7 +210,7 @@ a {
 <span class="linenum">24</span>  <span class="keyword">end</span></code></pre>
       </div>
     </dd>
-    <script type="text/javascript">moveProgressBar('25.0');</script>
+    <script type="text/javascript">moveProgressBar('23.5');</script>
     <dd class="spec failed">
       <span class="failed_spec_name">should get yelled at when sending unexpected messages</span>
       <div class="failure" id="failure_3">
@@ -226,7 +226,7 @@ a {
 <span class="linenum">30</span>  <span class="keyword">end</span></code></pre>
       </div>
     </dd>
-    <script type="text/javascript">moveProgressBar('31.2');</script>
+    <script type="text/javascript">moveProgressBar('29.4');</script>
     <dd class="spec not_implemented"><span class="not_implemented_spec_name">should make eggs and bacon</span></dd>
   </dl>
 </div>
@@ -234,7 +234,7 @@ a {
   <dl>
   <dt id="behaviour_2">Running specs with --diff</dt>
     <script type="text/javascript">makeRed('behaviour_2');</script>
-    <script type="text/javascript">moveProgressBar('37.5');</script>
+    <script type="text/javascript">moveProgressBar('35.2');</script>
     <dd class="spec failed">
       <span class="failed_spec_name">should print diff of different strings</span>
       <div class="failure" id="failure_4">
@@ -256,7 +256,7 @@ Diff:
 <span class="linenum">14</span>  <span class="keyword">end</span></code></pre>
       </div>
     </dd>
-    <script type="text/javascript">moveProgressBar('43.7');</script>
+    <script type="text/javascript">moveProgressBar('41.1');</script>
     <dd class="spec failed">
       <span class="failed_spec_name">should print diff of different objects' pretty representation</span>
       <div class="failure" id="failure_5">
@@ -293,29 +293,29 @@ Diff:
 <div class="behaviour">
   <dl>
   <dt id="behaviour_3">A consumer of a stub</dt>
-    <script type="text/javascript">moveProgressBar('50.0');</script>
+    <script type="text/javascript">moveProgressBar('47.0');</script>
     <dd class="spec passed"><span class="passed_spec_name">should be able to stub methods on any Object</span></dd>
   </dl>
 </div>
 <div class="behaviour">
   <dl>
   <dt id="behaviour_4">A stubbed method on a class</dt>
-    <script type="text/javascript">moveProgressBar('56.2');</script>
+    <script type="text/javascript">moveProgressBar('52.9');</script>
     <dd class="spec passed"><span class="passed_spec_name">should return the stubbed value</span></dd>
-    <script type="text/javascript">moveProgressBar('62.5');</script>
+    <script type="text/javascript">moveProgressBar('58.8');</script>
     <dd class="spec passed"><span class="passed_spec_name">should revert to the original method after each spec</span></dd>
-    <script type="text/javascript">moveProgressBar('68.7');</script>
+    <script type="text/javascript">moveProgressBar('64.7');</script>
     <dd class="spec passed"><span class="passed_spec_name">can stub! and mock the same message</span></dd>
   </dl>
 </div>
 <div class="behaviour">
   <dl>
   <dt id="behaviour_5">A mock</dt>
-    <script type="text/javascript">moveProgressBar('75.0');</script>
+    <script type="text/javascript">moveProgressBar('70.5');</script>
     <dd class="spec passed"><span class="passed_spec_name">can stub!</span></dd>
-    <script type="text/javascript">moveProgressBar('81.2');</script>
+    <script type="text/javascript">moveProgressBar('76.4');</script>
     <dd class="spec passed"><span class="passed_spec_name">can stub! and mock</span></dd>
-    <script type="text/javascript">moveProgressBar('87.5');</script>
+    <script type="text/javascript">moveProgressBar('82.3');</script>
     <dd class="spec passed"><span class="passed_spec_name">can stub! and mock the same message</span></dd>
   </dl>
 </div>
@@ -323,7 +323,7 @@ Diff:
   <dl>
   <dt id="behaviour_6">pending example (using pending method)</dt>
     <script type="text/javascript">makeYellow('behaviour_6');</script>
-    <script type="text/javascript">moveProgressBar('93.7');</script>
+    <script type="text/javascript">moveProgressBar('88.2');</script>
     <dd class="spec not_implemented"><span class="not_implemented_spec_name">should be reported as &quot;PENDING: for some reason&quot;</span></dd>
   </dl>
 </div>
@@ -331,12 +331,20 @@ Diff:
   <dl>
   <dt id="behaviour_7">pending example (with no block)</dt>
     <script type="text/javascript">makeYellow('behaviour_7');</script>
-    <script type="text/javascript">moveProgressBar('100.0');</script>
+    <script type="text/javascript">moveProgressBar('94.1');</script>
     <dd class="spec not_implemented"><span class="not_implemented_spec_name">should be reported as &quot;PENDING: Not Yet Implemented&quot;</span></dd>
   </dl>
 </div>
+<div class="behaviour">
+  <dl>
+  <dt id="behaviour_8">pending example (with block for pending)</dt>
+    <script type="text/javascript">makeYellow('behaviour_8');</script>
+    <script type="text/javascript">moveProgressBar('100.0');</script>
+    <dd class="spec not_implemented"><span class="not_implemented_spec_name">should have a failing block, passed to pending, reported as &quot;PENDING: for some reason&quot;</span></dd>
+  </dl>
+</div>
 <script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>x seconds</strong>";</script>
-<script type="text/javascript">document.getElementById('totals').innerHTML = "16 examples, 5 failures, 3 pending";</script>
+<script type="text/javascript">document.getElementById('totals').innerHTML = "17 examples, 5 failures, 4 pending";</script>
 </div>
 </div>
 </body>
